# WickedAdventure

./: CMakeLists.txt  Template_Windows.vcxproj  WickedAdventure.sln  config.h  icon.h  main_MacOS.mm  main_iOS.mm  main_linux.cpp  main_windows.cpp
.github/workflows/: build-nightly.yml  build-pr.yml  build.yml
AppIcon.icon/: icon.json
WickedAdventure.xcodeproj/: project.pbxproj
WickedAdventure.xcodeproj/xcshareddata/xcschemes/: WickedAdventure_iOS.xcscheme
